--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srcpack",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "Zero-config CLI for bundling code into LLM-optimized context files",
   "keywords": [
     "llm",
@@ -30,7 +30,16 @@
   "author": "Konstantin Tarkus <koistya@kriasoft.com>",
   "license": "MIT",
   "homepage": "https://kriasoft.com/srcpack/",
-  "repository": "github:kriasoft/srcpack",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kriasoft/srcpack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kriasoft/srcpack/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "type": "module",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -48,8 +57,7 @@
     "schema.json"
   ],
   "scripts": {
-    "build": "bun build ./src/cli.ts ./src/index.ts --outdir ./dist --target bun && tsc",
-    "typecheck": "tsc -p tsconfig.check.json",
+    "build": "bun build ./src/cli.ts ./src/index.ts --outdir ./dist --target node && tsc",
     "check": "tsc -p tsconfig.check.json",
     "test": "bun test tests/unit/ tests/e2e/",
     "test:unit": "bun test tests/unit/",
@@ -67,14 +75,17 @@
     "@clack/prompts": "^0.11.0",
     "@googleapis/drive": "^20.0.0",
     "cosmiconfig": "^9.0.0",
+    "fast-glob": "^3.3.3",
     "google-auth-library": "^10.5.0",
     "ignore": "^7.0.5",
     "oauth-callback": "^1.2.5",
     "ora": "^9.0.0",
+    "picomatch": "^4.0.2",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/bun": "^1.3.6",
+    "@types/picomatch": "^4.0.2",
     "gh-pages": "^6.3.0",
     "prettier": "^3.8.0",
     "typescript": "^5.9.3",
