--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srcpack",
-  "version": "0.1.10",
+  "version": "0.1.13",
   "description": "Zero-config CLI for bundling code into LLM-optimized context files",
   "keywords": [
     "llm",
@@ -54,7 +54,8 @@
   "files": [
     "dist",
     "src",
-    "schema.json"
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
     "build": "bun build ./src/cli.ts ./src/index.ts --outdir ./dist --target node && tsc",
